src/components/PostCard/PostCard.module.css
.Card {
    display: grid;
    gap: 10px;
    padding: 10px;
    border-radius: 20px;
    background: linear-gradient(180deg, #F4F5F8 0%, #FFF 55.66%);
    box-shadow: 0 1px 16px 0 rgba(0, 0, 0, 0.14);
    cursor: pointer;
}

.Head {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.PostDate {
    color: #B6B7BA;
    font-size: 12px;;
}

.Img {
    overflow: hidden;
}

.Img img {
    width: 100%;
    height: 200px;
    object-fit: cover;
    transition: all 1s ease-in-out;
}

.Card:hover .Img img {
    opacity: 0.8;
    transform: scale(1.05);
}

